Fixed some subtle bugs caused by the shift to the lighter DOM-call model. Changed the styling of equations and definitions to be more subtle yet more aesthetically similar. Both now have hover styles.

--- a/style/equation.css
+++ b/style/equation.css
@@ -27,7 +27,11 @@ div.equationBlock a:hover {
 }
 
 span.equation {
-        border-bottom:1px dotted #555555;
+	border-bottom:1px dashed #555555;
+}
+
+span.equation:hover {
+	border-bottom:1px dashed #AA0000;
 }
 
 .equationhelp {
